books/projects/rac/tests/yaml_test/data_types/struct-default-values-incompatible.ref.stderr
struct-default-values-incompatible.cpp:3 (17-18): syntax error, unexpected ']'
 3 | struct S { int a[] = 3; }
   |                  ^
