books/projects/rac/tests/yaml_test/data_types/struct-default-values-incompatible.cpp
// RAC begin

struct S { int a[] = 3; }
